--- a/src/app/component/coin-list/coin-list.component.html
+++ b/src/app/component/coin-list/coin-list.component.html
@@ -26,7 +26,6 @@
                                 </div>
                             </div>
                         </ng-container>
-
                     </div>
                 </marquee>
             </div>
@@ -70,7 +69,7 @@
                         <td>{{product.price_change_percentage_24h}}%</td>
                         <td>{{product.market_cap| currency: currency}}</td>
                         <td>
-                            <button pButton pRipple label="Details" icon="pi pi-plus" (click)="gotoDetails(product)"
+                            <button pButton pRipple label="Details" (click)="gotoDetails(product)"
                                 class="p-button-success mr-2"></button>
                         </td>
                     </tr>
